# rust_farming

./: .gitignore  CMakeLists.txt  Gene.cpp  Gene.hpp  README.md  main.cpp  plant.cpp  plant.hpp  test.cpp
test/: CMakeLists.txt  geneticTests.cpp
